re PR target/7784 ([Sparc] ICE in extract_insn, at recog.c:2148)

PR target/7784
	* reload.c (find_reloads_address): Handle
	(PLUS (PLUS (REG) (REG)) (CONST_INT)) form for
	all base registers.

From-SVN: r64889